@@ -1,3 +1,4 @@
+  o Fix possible crash when using heavily popups
 ------------------------------------------
 V1.0.90 March 30, 2004
   o Migrate from Imake to the GNU autotools.
